# devops-onsite

./: .dockerignore  Dockerfile  README.md  setup.cfg
src/gram/: __main__.py  state.py
src/gram/handlers/: __init__.py  code.py  health.py  main.py  sleep.py  status.py  work.py
