[metadata]
name = gram
version = 0.0.1
author = Dev Ops
author_email = devops@deepgram.com

description = Example devops application
long_description = file: README.md
long_description_content_type = text/markdown

url = https://deepgram.com
project_urls =
    Homepage = https://deepgram.com
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    tornado ~= 6.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gram = gram.__main__:main
